--- a/Day-1/JavaScriptEx_day1/Fullstack-REST-API/package.json
+++ b/Day-1/JavaScriptEx_day1/Fullstack-REST-API/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack-startcode",
+  "name": "fullstack-restapi",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
